feat: OpenRewrite sprintBoot 2.6.3 -> 3.4.5 and format